# fuzzing-demo

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  Dockerfile  INTEGRATION-GUIDE.md  README.md  SETUP-INTEGRATIONS.sh  bandit.yaml  defectdojo_findings.json  demo_for_teamlead.sh  email_notification.txt  fuzz_libfuzzer  fuzz_libfuzzer_llm  fuzz_results.json  harness.cpp  honggfuzz_report.md  jira_ticket.json  llm_analysis.json  pipeline-logs.txt  run_full_pipeline.sh  run_honggfuzz_pipeline.sh  run_simple_pipeline.sh  test-full-pipeline.sh  vuln_demo  vuln_demo_fixed  vulnerabilities.cpp  vulnerabilities_fixed.cpp
blackbox-fuzzing/: Dockerfile  fuzz.sh  target  target.c
blackbox-target/: README.md  target  vulnerable.c
crashes_llm/: crash-09740be680c7dfd96ab3603ce2145449906b92e6
day1-practice/: fuzzer
fuzz/: afl_harness.cpp  harness.cpp  harness_llm.cpp
fuzz-cpp/: crash-f521a9ad88fab4b4d0548be2f471a0a3f01342f8  fuzzer  fuzzer_simple  hfuzzer  simple_vuln.cpp
fuzz-js/: crash-9f524cf9a4dbc91d99b700a30b02b1d7976eb097  crash_target.js  fuzz_target.js  package-lock.json  package.json  vulnerable.js
ml/: fp_classifier.pkl  generate_training_data.py  test_classifier.py  train_classifier.py  training_data.json
scripts/: afl-auto-pipeline.py  analyze-afl-crashes.py  auto-fuzz-pipeline.py  check_all_findings.py  check_finding.py  create_cve_finding.py  create_defectdojo_engagement.py  create_defectdojo_product.py  create_finding_from_fuzzing.py  create_full_defectdojo.py  create_jira.py  deduplicate.py  deduplicate_ollama.py  defectdojo_integration.py  ollama-dedup.py  (+15 more)
(+68 files in other folders)
